@@ -3,6 +3,9 @@
 	and NONEWLINES is set, there is no next line at which to put the
 	cutting point for a redo.  So put it at the very end of the cut.
 	This fixes Savannah bug #46541.
+	* src/text.c (add_undo, update_undo, do_undo, do_redo), src/nano.h:
+	Store and retrieve the correct file size before and after an action.
+	This fixes Savannah bug #45523.
 
 2015-11-29  Benno Schulenberg  <bensberg@justemail.net>
 	* src/color.c (reset_multis): Evaluate correctly whether to reset
